--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -34,7 +34,7 @@
         </div>
 
         <ul id="menu">
-     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tiendas</label>
            <ul class="interior">
@@ -55,7 +55,7 @@
                   <div> <img src="foto/ajisen.jpg"  class="grande"></div>
                   <p id="text">Ajisen es un restaurante japosen pequeño pero muy decorado y sirven unos platos muy buenos y bastante economicos. Para poder comer aqui primero hay reservar mesa.</p>
                   <p id="text">Recomendamos este restauyrante ya que esta muy bien en calidad precio, el servicio es atento y el local es tranquilo. </p>
-                  <p id="text">Telefono: 933 30 26 04</p>
+                  <p id="text3">Telefono: 933 30 26 04</p>
                 </div>
 
 
@@ -63,7 +63,7 @@
                   <div> <img src="foto/fukuya.jpg"  class="grande"></div>
                 <p id="text">Fukuya, ofrece un sushi de muy alta calidad además de otros platos caseros de la gastronomia japonesa. El restaurante por dentro es grande, muy bien iluminado y gran decoración con objetos japoneses por las paredes y estanterias. La comida es estupenda y muy economica.</p>
                 <p id="text">En el bufet libre, hay mucho que elegir ya que es muy variado y barato, además  el servicio es rapido.</p>
-                <p id="text">Telefono: 935 18 65 04</p>
+                <p id="text3">Telefono: 935 18 65 04</p>
                 </div>
 
 
@@ -71,7 +71,7 @@
                 <div> <img src="foto/hiro.jpg"  class="grande"></div>
                  <p id="text">Ramen-ya Hiro, que decir de este restaurante, hacen el mejor ramen de Barcelona, local pequeño, 1h de cola pero merece la pena y los camareros son amables.</p>
 
-                  <p id="text">Telefono: 930 02 84 41</p>
+                  <p id="text3">Telefono: 930 02 84 41</p>
               </div>
 
 
@@ -80,39 +80,39 @@
             <div> <img src="foto/jardin.jpg"  class="grande"></div>
             <p id="text">Jardin de Bambu, es espacioso, en calidad/precio esta bastante bien, tienen una amplia carta, y platos que normalmente no encontrarias en un buffet.</p>
             <p id="text">La comida la sirven muy rapida y es de agradecer, los camaremos estan un poco estresados pero intentan ser amables a la vez.</p>
-            <p id="text">Telefono: 935 39 88 82</p>
+            <p id="text3">Telefono: 935 39 88 82</p>
           </div>
 
           <div id="otonashi"><h2>Mikawa</h2>
             <div> <img src="foto/mikawa.jpg"  class="grande"></div>
             <p id="text">Mikawa es un resataurante de comida japonesa, la carta es variada (makis, sopas, temakis, sushi, noodles, fideos, arroz...). Su presentación esta bien, El servicio es rápido y los camareros son amables. El precio es muy ajustado a la calidad.</p>
             <p id="text">Suelen tardar un poco en servir la comida ya que solo hay 2 camareros para atender a 30 personas.</p>
-            <p id="text">Telefono: 930 23 19 04</p>
+            <p id="text3">Telefono: 930 23 19 04</p>
           </div>
 
           <div id="haiku"><h2>Nihon Sakari</h2>
             <div> <img src="foto/nihon.jpg"  class="grande"></div>
             <p id="text">Nihon Sakari, es uno de los mejores restaurantes, acogedor, con calidad y con un precio razonable. </p>
 
-            <p id="text">Telefono: 932 65 04 60</p>
+            <p id="text3">Telefono: 932 65 04 60</p>
           </div>
 
           <div id="norma"><h2>Nomo Gracia</h2>
             <div> <img src="foto/nomo.jpg"  class="grande"></div>
             <p id="text">Nomo Graca, donde la comida es una maravilla, comida japonesa con sababores nuevos. La comida bien presentada y bien servida en un ambiente informal y bien decorado. El servicio es execelente y el local es amplio con opción de reserva aunque algo lento en servir.</p>
-            <p id="text">Telefono: 934 15 96 22</p>
+            <p id="text3">Telefono: 934 15 96 22</p>
           </div>
           <div id="haiku"><h2>Ramen BCN</h2>
             <div> <img src="foto/ramen.jpg"  class="grande"></div>
             <p id="text">En este restaurente la comida esta buenisima, el trato al cliente es estupendo siendo amable y atento, el local es grande y limpio y buena decoracion basica pero llamatiba a la vez, es muy recomendable visitar este lugar.</p>
-            <p id="text">Telefono: 931 06 58 74</p>
+            <p id="text3">Telefono: 931 06 58 74</p>
           </div>
 
 
           <div id="haiku"><h2>Yatai</h2>
             <div> <img src="foto/yatai.jpg"  class="grande"></div>
             <p id="text">Si no has estado nunca en Japon, tienes que visitar este lugar, ya que la decoracion de este sitio esta repleto de detalles curiosos. Recomendale reservar ya que se suele llenar mucho. La comida es barata pero no es de muy buena calidad, asi que si quieres gastarte poco dinero y comer mucho este es tu sitio.</p>
-            <p id="text">Telefono: 935 32 64 56</p>
+            <p id="text3">Telefono: 935 32 64 56</p>
           </div>
 
 
@@ -121,7 +121,7 @@
             <div> <img src="foto/okono.jpg"  class="grande"></div>
             <p id="text">Kawamura es un restaurante cálido y bien ambientado con la cultura japonesa. El servicio es muy atento y profesional, el precio es razonable ya que la comida es de muy buena calidad. </p>
 
-            <p id="text">Telefono: 930 23 75 46</p>
+            <p id="text3">Telefono: 930 23 75 46</p>
           </div>
 
 
@@ -129,7 +129,7 @@
             <div> <img src="foto/yutaka1.jpg"  class="grande"></div>
             <p id="text">Yutaka es un restaurante buffet libre, donde puedes encontrar comida japonesa. Es un sitio donde el precio esta bien, el local es algo ruidoso pero es bastante amplio. </p>
 
-            <p id="text">Telefono: 934 58 04 94</p>
+            <p id="text3">Telefono: 934 58 04 94</p>
           </div>
 
 
