--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -66,22 +66,22 @@
         <div id="nunoya"><h2>Tokyo-Ya</h2>
           <div> <img src="foto/tokio1.jpg"  class="grande"></div>
           <div> <img src="foto/tokio2.jpg"  class="grande"></div>
-        <p id="text2">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. La atención al publico está muy bien, ya que te reciben con mucho guto al entrar.</p>
+        <p id="text1">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. La atención al publico está muy bien, ya que te reciben con mucho guto al entrar.</p>
           <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
-            <p id="text">Los precios de este supermercado son un poco elevados, ya que son de importación, vienen con buena calidad y con los productos congelados son muy frescos.</p>
+            <p id="text1">Los precios de este supermercado son un poco elevados, ya que son de importación, vienen con buena calidad y con los productos congelados son muy frescos.</p>
             <p id="text3">Telefon: 935 32 19 38</p>
 
         </div>
           <div id="otonashi"><h2>Takashi Ochiai</h2>
             <div> <img src="foto/takashi1.jpg"  class="grande"></div>
             <div> <img src="foto/takashi2.jpg"  class="grande"></div>
-             <p id="text">Takashi Ochiai es una pasteleria y cafeteria japonesa minimalista, puedes encontrar desde dulces japoneses hasta sus bebidas. El precio de sus productos son muy elevados pero merece la pena pagar por ello ya que la comida esta muy bien. Merece la pena visitar este sitio.</p>
+             <p id="text1">Takashi Ochiai es una pasteleria y cafeteria japonesa minimalista, puedes encontrar desde dulces japoneses hasta sus bebidas. El precio de sus productos son muy elevados pero merece la pena pagar por ello ya que la comida esta muy bien. Merece la pena visitar este sitio.</p>
             <div> <img src="foto/takashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
-            <p id="text"> Este sitio esta bien para ir una vez a la semana, ya que solo un capuchino cuesta 6,30€ no es muy sano para la cartera. Si te interesa aprender hacer postres japoneses, en este sitio hacen cursos pero tienen muy pocas plazas asi que corre.</p>
+            <p id="text1"> Este sitio esta bien para ir una vez a la semana, ya que solo un capuchino cuesta 6,30€ no es muy sano para la cartera. Si te interesa aprender hacer postres japoneses, en este sitio hacen cursos pero tienen muy pocas plazas asi que corre.</p>
             <p id="text3">Telefon: 934 53 63 83</p>
           </div>
           <div id="haiku"><h2>tienda</h2>
