--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -68,18 +68,18 @@
         <div id="nunoya"><h2>Nunoya</h2>
           <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
           <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
-        <p id="text2">Si lo tuyo es la moda, el diseño o la filia hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
+        <p id="text1">Si lo tuyo es la moda, el diseño o la filia hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
-            <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.
+            <p id="text1">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.
             Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
             <p id="text3">Telofono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
             <div> <img src="foto/norma2.jpg"  class="grande"></div>
-             <p id="text2">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
+             <p id="text1">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
             <div> <img src="foto/norma1.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
@@ -89,42 +89,42 @@
           <div id="otonashi"><h2>Otomashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-            <p id="text">Otomashi es una pequeña tienda de merchandising y accesorios, el trato al publico es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
+            <p id="text1">Otomashi es una pequeña tienda de merchandising y accesorios, el trato al publico es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
             <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
-            <p id="text">Según la critica de la gente, en esta tienda puedes comprar accesorios de imitación china pero a un buen precio. Es recomendable comprar si no te quieres gastar mucho dinero en accesorios.</p>
+            <p id="text1">Según la critica de la gente, en esta tienda puedes comprar accesorios de imitación china pero a un buen precio. Es recomendable comprar si no te quieres gastar mucho dinero en accesorios.</p>
             <p id="text3">Telofono: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
             <div> <img src="foto/haiku2.jpg"  class="grande"></div>
-            <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <p id="text1">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
             <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
-            <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
             <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Momo store</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
             <div> <img src="foto/momo2.jpg"  class="grande"></div>
-            <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <p id="text1">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
             <div> <img src="foto/momo3.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
-            <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
             <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
             <div> <img src="foto/eikyo1.jpg"  class="grande"></div>
             <div> <img src="foto/eikyo2.jpg"  class="grande"></div>
-            <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <p id="text1">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
             <div> <img src="foto/eikyo3.jpg"  class="pequeña"></div>
             <div> <img src="foto/eikyo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/eikyo5.jpg"  class="pequeña"></div>
-            <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
-            <p id="text">Telofono: 932 17 96 23</p>
+            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text3">Telofono: 932 17 96 23</p>
           </div>
       </div>
   </div>
