--- a/web bien/BarnaJAP.html
+++ b/web bien/BarnaJAP.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" name="MobileOptimized" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="sintesis.css">
+  <link rel="stylesheet" href="BarnaJAPmov.css" type="text/css">
+  <link rel="stylesheet" href="BarnaJAP.css" type="text/css">
+
   <title>BarnaJap</title>
 </head>
 
 <body>
-  <img src="../fondo.jpg" id="fondo">
+  <img src="../inicio.jpg" id="fondo">
   <div id="idioma">
     <div id="catala">CATALÀ</div>
-    <div id="castellano">CASTELLANO</div>
+    <div id="castellano"><a href="nosotros.html" style="color:black">CASTELLANO</a></div>
   </div>
 </body>
 </html>
