--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div id="arriba">
-      <div><img src="foto/logo.png" id="logo"></div>
+      <div><a href="BarnaJAP.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
-        <div class="ca"><a href="castellano.html">Castellano</a></div>
+        <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
         <div class="ca">Catalan</div>
       </div>
   </div>
@@ -26,13 +26,14 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html">Consumo</a></li>
+            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
+            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
+          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Nosotros</a></div>
+          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
+
 
         <ul id="menu">
      <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
@@ -45,58 +46,59 @@
          </li>
          <li><a href="restaurantes.html">Restaurante</a></li>
          <li><a href="#r">Rutas</a></li>
-         <li><a href="castellano.html">Nosotros</a></li>
-         <li><a href="#r">Home</a></li>
+         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="BarnaJAP.html">Home</a></li>
     </ul>
   </ul>
 
         <div id="nosotros">
-        <h1> Tiendas</h1>
+
         <div id="madame"><h2>Yang Kuang Supermercats</h2>
           <div> <img src="foto/yang1.jpg"  class="grande"></div>
           <div> <img src="foto/yang2.jpg"  class="grande"></div>
-          <p id="text1">Yang Kuang es una tienda de alimentación oriantal que se encuentra en pleno Arco de Triumfo en Barcelona, en ella puedes encontrar todo tipo de alimentos, entre ellos se encuentran: Carne, dulces, bebidas de distintos sabores, tofu fresto y, además esta tienda dispone de dos apartados, en una podrás encontrar los productos más frescos y en la otra parte podrás encontrar comida ya preparada. Un añadido también es que es perfecta para la gente vegana y vegetariana.</p>
+          <p id="text1">Yang Kuang es una tienda de alimentación Oriental que se encuentra en pleno Arco de Triunfo en Barcelona, en ella puedes encontrar todo tipo de alimentos, entre ellos se encuentran: Carne, dulces, bebidas de distintos sabores, tofu fresco, además esta tienda dispone de dos apartados, en una podrás encontrar los productos más frescos y en la otra parte podrás encontrar comida ya preparada. Un añadido también es que es perfecta para la gente vegana y vegetariana.</p>
           <div> <img src="foto/yang3.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
-          <p id="text1">Nuestra opinión sobre este supermercado es que los productos estan bien de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
+          <p id="text1">Nuestra opinión sobre este supermercado es que los productos son económicos de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
           <p id="text3">Telefono: 932 46 29 00</p>
         </div>
 
         <div id="nunoya"><h2>Tokyo-Ya</h2>
           <div> <img src="foto/tokio1.jpg"  class="grande"></div>
           <div> <img src="foto/tokio2.jpg"  class="grande"></div>
-        <p id="text1">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. La atención al publico está muy bien, ya que te reciben con mucho guto al entrar.</p>
+        <p id="text1">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación Japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. Puedes encontrar productos ya procesados frescos, incluso en ella puedes encontrar un expositor de artículos para goumerts.</p>
           <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
-            <p id="text1">Los precios de este supermercado son un poco elevados, ya que son de importación, vienen con buena calidad y con los productos congelados son muy frescos.</p>
+            <p id="text1">Los precios de este supermercado son un poco elevados, ya que son de importación que viene desde Japón, estos vienen de buena calidad. La atención al público es estupenda, estos te reciben con muy buena educación al entrar y al salir.</p>
             <p id="text3">Telefon: 935 32 19 38</p>
 
         </div>
           <div id="otonashi"><h2>Takashi Ochiai</h2>
             <div> <img src="foto/takashi1.jpg"  class="grande"></div>
             <div> <img src="foto/takashi2.jpg"  class="grande"></div>
-             <p id="text1">Takashi Ochiai es una pasteleria y cafeteria japonesa minimalista, puedes encontrar desde dulces japoneses hasta sus bebidas. El precio de sus productos son muy elevados pero merece la pena pagar por ello ya que la comida esta muy bien. Merece la pena visitar este sitio.</p>
+             <p id="text1">Takashi Ochiai es una pastelería y cafetería Japonesa minimista, en ella puedes encontrar desde dulces japoneses hasta sus bebidas más peculiares. Esta pastelería dispone con unos cursos de cocina Japonesa donde te enseñan a hacer postres, pero sus plazas son algo limitadas.El precio de sus productos son muy elevados pero merece la pena pagar por ello ya que la comida esta muy bien.</p>
             <div> <img src="foto/takashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
-            <p id="text1"> Este sitio esta bien para ir una vez a la semana, ya que solo un capuchino cuesta 6,30€ no es muy sano para la cartera. Si te interesa aprender hacer postres japoneses, en este sitio hacen cursos pero tienen muy pocas plazas asi que corre.</p>
+            <p id="text1"> Al ser una de las pocas pastelerías Japonesas en Barcelona, los productos son elevados pero a la vez de una gran calidad que no podrías encontrar en tiendas ya de comida procesada, Takashi Ochiai es grande que dispone con dos grandes apartados.</p>
             <p id="text3">Telefon: 934 53 63 83</p>
           </div>
-          <div id="haiku"><h2>tienda</h2>
+          <div id="haiku"><h2>Starting From Snack</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-  Hay que ir a este sitio AÚN
+            <p id="text1">Esta tienda es relativamente nueva, apenas tiene productos en su interior, pero si que son de buena calidad, y bastante económicos, próximamente sabremos más sobre sus productos.</p>
             <div> <img src="foto/tienda3.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda4.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda5.jpg"  class="pequeña"></div>
+            <p id="text3">Telefon:---</p>
           </div>
 
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
+    <div id="flecha"><a href="#fondo" style="color:black"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
