--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <div id="arriba">
-      <div><img src="foto/logo.png" id="logo"></div>
+      <div><a href="BarnaJAP.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
-        <div class="ca"><a href="castellano.html">Castellano</a></div>
+        <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
         <div class="ca">Catalan</div>
       </div>
   </div>
@@ -27,12 +27,12 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html">Consumo</a></li>
+            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
+            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
+          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Nosotros</a></div>
+          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
         <ul id="menu">
@@ -46,8 +46,8 @@
          </li>
          <li><a href="restaurantes.html">Restaurante</a></li>
          <li><a href="#r">Rutas</a></li>
-         <li><a href="castellano.html">Nosotros</a></li>
-         <li><a href="#r">Home</a></li>
+         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="BarnaJAP.html">Home</a></li>
     </ul>
   </ul>
 
@@ -57,33 +57,33 @@
         <div id="madame"><h2>Madame Chocolat</h2>
           <div> <img src="foto/madame4.jpg"  class="grande"></div>
           <div> <img src="foto/madame5.jpg"  class="grande"></div>
-          <p id="text1">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.</p>
+          <p id="text1">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas Japonesas en ella puedes encontrar desde ropa lolita, gótica, steampunk y otras tendencias alternativas con un extenso catalogo de accesorios y decoración nipona.</p>
           <div> <img src="foto/madame1.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
-          <p id="text1">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
+          <p id="text1">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, en ella puedes encontrar un extenso catálogo de variedad sobre cosas de Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas, la calidad de sus productos es bastante buena.</p>
           <p id="text3">Telefono: 932 44 84 23</p>
         </div>
 
         <div id="nunoya"><h2>Nunoya</h2>
           <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
           <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
-        <p id="text1">Si lo tuyo es la moda, el diseño o la filia hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
+        <p id="text1">Si lo tuyo son las telas, el diseño o la pasión hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y quimonos que vienen adquiridas desde Japón, esta situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
-            <p id="text1">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.
+            <p id="text1">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son de gran calidad y de algodón 100%.
             Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
             <p id="text3">Telofono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
             <div> <img src="foto/norma2.jpg"  class="grande"></div>
-             <p id="text1">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
+             <p id="text1">Si te gustan los cómics y los mangas entonces Norma Cómics situada en Barcelona es una de las librarías especializadas en cómics más importantes de Europa, en ella puedes encontrar desde accesorios y mangas provenientes de Japón, figuras, accesorios de películas o de Japón.</p>
             <div> <img src="foto/norma1.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
-            <p id="text1">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
+            <p id="text1">Norma Cómics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas más ambientadas sobre la cultura Japonesa.</p>
             <p id="text3">Telofono: 932 44 84 23</p>
           </div>
           <div id="otonashi"><h2>Otomashi</h2>
@@ -93,37 +93,37 @@
             <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
-            <p id="text1">Según la critica de la gente, en esta tienda puedes comprar accesorios de imitación china pero a un buen precio. Es recomendable comprar si no te quieres gastar mucho dinero en accesorios.</p>
+            <p id="text1">A pesar de que Otamashi sea una tienda pequeña, cuenta con una gran variedad de productos Japoneses, la mayoría de los productos son falsos pero de buena calidad y bastantes baratos.</p>
             <p id="text3">Telofono: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
             <div> <img src="foto/haiku2.jpg"  class="grande"></div>
-            <p id="text1">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <p id="text1">Haiku es una tienda pequeña y muy agradable, en ella puedes encontrar podrás encontrar todo tipo de cosas relacionadas sobre Japón, desde libros de cocina, telas japonesas, comida, decoración, tanto de cultura japonesa tradicional como moderna. En Haiku y muchas cosas más, tanto de cultura tradicional japonesa como moderna.</p>
             <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
-            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda para la gente que quiera sentirse en japon. Los precios son competitivos, pero merece la pena por la buena calidad que tienen. </p>
             <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Momo store</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
             <div> <img src="foto/momo2.jpg"  class="grande"></div>
-            <p id="text1">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <p id="text1">Momo es una tienda Japonesa y Coreana muy original, en esta tienda pequeña encontrarás muchas cosas variadas, desde comida, CDs, photo cards y más accesorios provenientes directamente de Japón y Corea.</p>
             <div> <img src="foto/momo3.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
-            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text1">Nuestra opinión sobre Momo es que el trato con el público es agradable y encantador, tiene buenos precios y sus productos son de gran calidad, además de que si no encuentras algo sobre el producto que deseas comprar lo puedes reservar. </p>
             <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
             <div> <img src="foto/eikyo1.jpg"  class="grande"></div>
             <div> <img src="foto/eikyo2.jpg"  class="grande"></div>
-            <p id="text1">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <p id="text1">Eikyo es una acogedora tienda de productos nipones, en el interior podrás encontrar todo tipo de accesorios Japoneses de lo más casuales, desde cultura tradicional hasta la más moderna, entre ellas bebidas, películas... Además Eikyo es una editorial de revistas Japonesas.</p>
             <div> <img src="foto/eikyo3.jpg"  class="pequeña"></div>
             <div> <img src="foto/eikyo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/eikyo5.jpg"  class="pequeña"></div>
-            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text1">Eikyo, es una tienda pequeña y acogedora, sus dueños son de lo más simpaticos y el trato con la gente es educado y encantador, se nota que tienen una gran pasión sobre la cultura Japonesa y siempre te van a recomendar los mejores productos sobre Japón. </p>
             <p id="text3">Telofono: 932 17 96 23</p>
           </div>
       </div>
