--- a/web bien/nosotros.html
+++ b/web bien/nosotros.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="castellanomov.css" type="text/css">
-  <link rel="stylesheet" href="castellano.css" type="text/css">
+  <link rel="stylesheet" href="nosotrosmov.css" type="text/css">
+  <link rel="stylesheet" href="nosotros.css" type="text/css">
 
   <title>Sobre nosotros</title>
 </head>
 <body>
   <div id="arriba">
-      <div><img src="foto/logo.png" id="logo"></div>
+      <div><a href="BarnaJAP.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
-        <div class="ca"><a href="castellano.html">Castellano</a></div>
-        <div class="ca">Catalan</div>
+        <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
+        <div class="ca"><a href=".html" style="color:black">Catalan</a></div>
       </div>
   </div>
   <div id="medio">
@@ -26,12 +26,12 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html">Consumo</a></li>
+            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
+            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
+          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Nosotros</a></div>
+          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
 
@@ -40,13 +40,13 @@
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
-             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-             <li><a href="consum.html">Consumo</a></li>
+             <li><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
+             <li><a href="consum.html" style="color:black">Consumo</a></li>
             </ul>
          </li>
-         <li><a href="restaurantes.html">Restaurante</a></li>
-         <li><a href="r">Rutas</a></li>
-         <li><a href="castellano.html">Nosotros</a></li>
+         <li><a href="restaurantes.html" >Restaurante</a></li>
+         <li><a href=".html">Rutas</a></li>
+         <li><a href="nosotros.html">Nosotros</a></li>
          <li><a href="sintesis.html">Home</a></li>
     </ul>
   </ul>
@@ -63,7 +63,7 @@
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
+    <div id="flecha"><a href="#fondo"  style="color:black"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
