--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div id="arriba">
-      <div><img src="foto/logo.png" id="logo"></div>
+      <div><a href="BarnaJAP.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
-        <div class="ca"><a href="castellano.html">Castellano</a></div>
+        <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
         <div class="ca">Catalan</div>
       </div>
   </div>
@@ -25,12 +25,12 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html">Consumo</a></li>
+            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
+            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
+          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Nosotros</a></div>
+          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
         <ul id="menu">
@@ -44,8 +44,8 @@
          </li>
          <li><a href="restaurantes.html">Restaurantes</a></li>
          <li><a href="#r">Rutas</a></li>
-         <li><a href="castellano.html">Nosotros</a></li>
-         <li><a href="#r">Home</a></li>
+         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="BarnaJAP.html">Home</a></li>
     </ul>
   </ul>
 
@@ -53,83 +53,83 @@
         <h1> Restaurantes</h1>
                 <div id="madame"><h2>Ramen-ya Ajisen</h2>
                   <div> <img src="foto/ajisen.jpg"  class="grande"></div>
-                  <p id="text">Ajisen es un restaurante japosen pequeño pero muy decorado y sirven unos platos muy buenos y bastante economicos. Para poder comer aqui primero hay reservar mesa.</p>
-                  <p id="text">Recomendamos este restauyrante ya que esta muy bien en calidad precio, el servicio es atento y el local es tranquilo. </p>
-                  <p id="text3">Telefono: 933 30 26 04</p>
+                  <p class="text">Ramen-Ya Ajisen es un restaurante Japonés, pequeño pero muy decorado que tiene un ambiente anime, en este restaurantey sirven unos platos típicos Japoneses de muy buena calidad y a un precio de lo más económico, su atención al píblico es lo más agradable.</p>
+
+                  <p class="text3">Telefono: 933 30 26 04</p>
                 </div>
 
 
                 <div id="nunoya"><h2>Fukuya</h2>
                   <div> <img src="foto/fukuya.jpg"  class="grande"></div>
-                <p id="text">Fukuya, ofrece un sushi de muy alta calidad además de otros platos caseros de la gastronomia japonesa. El restaurante por dentro es grande, muy bien iluminado y gran decoración con objetos japoneses por las paredes y estanterias. La comida es estupenda y muy economica.</p>
-                <p id="text">En el bufet libre, hay mucho que elegir ya que es muy variado y barato, además  el servicio es rapido.</p>
-                <p id="text3">Telefono: 935 18 65 04</p>
+                <p class="text">Fukuya, ofrece un sushi de muy alta calidad además de otros platos caseros de la gastronomia Japonesa, este tiene una decoración básica pero acogedora. Aquí puedes encontrar desde cocina nipona antigua hasta la más moderna. Es bastante grande y acogedora y la atención al píblico es amable.</p>
+
+                <p class="text3">Telefono: 935 18 65 04</p>
                 </div>
 
 
               <div id="norma"><h2>Ramen-ya Hiro</h2>
                 <div> <img src="foto/hiro.jpg"  class="grande"></div>
-                 <p id="text">Ramen-ya Hiro, que decir de este restaurante, hacen el mejor ramen de Barcelona, local pequeño, 1h de cola pero merece la pena y los camareros son amables.</p>
+                 <p class="text">Ramen-ya Hiro, en este restaurante hacen el mejor ramen de Barcelona, aparte de hacer ramen también hacen fideos Japoneses, es un local pequeño y un poco antiguo. En este restaurante japonés hay que ir pronto porque si no tienes que hacer cola, pero vale la pena para poder comer su ramen y para la atención al público.</p>
 
-                  <p id="text3">Telefono: 930 02 84 41</p>
+                  <p class="text3">Telefono: 930 02 84 41</p>
               </div>
 
 
 
           <div id="otonashi"><h2>Jardin de Bambu</h2>
             <div> <img src="foto/jardin.jpg"  class="grande"></div>
-            <p id="text">Jardin de Bambu, es espacioso, en calidad/precio esta bastante bien, tienen una amplia carta, y platos que normalmente no encontrarias en un buffet.</p>
-            <p id="text">La comida la sirven muy rapida y es de agradecer, los camaremos estan un poco estresados pero intentan ser amables a la vez.</p>
-            <p id="text3">Telefono: 935 39 88 82</p>
+            <p class="text">Jardín del Bambú, es un buffet libre con bastante variedad de platos Japoneses, tiene un ambiente moderno y acogedor con una gran iluminación y la calidad-precio es adecuada, su servicio es agradable y eficiente.</p>
+
+            <p class="text3">Telefono: 935 39 88 82</p>
           </div>
 
           <div id="otonashi"><h2>Mikawa</h2>
             <div> <img src="foto/mikawa.jpg"  class="grande"></div>
-            <p id="text">Mikawa es un resataurante de comida japonesa, la carta es variada (makis, sopas, temakis, sushi, noodles, fideos, arroz...). Su presentación esta bien, El servicio es rápido y los camareros son amables. El precio es muy ajustado a la calidad.</p>
-            <p id="text">Suelen tardar un poco en servir la comida ya que solo hay 2 camareros para atender a 30 personas.</p>
-            <p id="text3">Telefono: 930 23 19 04</p>
+            <p class="text">Mikawa es un resataurante de comida japonesa, la carta es variada en ella puedes encontrar makis, sopas, sushi... Este restaurante cuenta con un buffer libre y un menú a la carta, es amplio y de buena iluminación su servicio es rápido y los camareros son amables. El precio es económico y su comida es exquisita.</p>
+
+            <p class="text3">Telefono: 930 23 19 04</p>
           </div>
 
           <div id="haiku"><h2>Nihon Sakari</h2>
             <div> <img src="foto/nihon.jpg"  class="grande"></div>
-            <p id="text">Nihon Sakari, es uno de los mejores restaurantes, acogedor, con calidad y con un precio razonable. </p>
+            <p class="text">Nihon Sakari, es uno de los mejores restaurantes Japoneses también es acogedor que dispone con decoración nipona, con gran calidad en sus productos, dispone con opciones para vegeritatienos y la atención al público es correcta y su calidad-precio es estupenda. </p>
 
-            <p id="text3">Telefono: 932 65 04 60</p>
+            <p class="text3">Telefono: 932 65 04 60</p>
           </div>
 
           <div id="norma"><h2>Nomo Gracia</h2>
             <div> <img src="foto/nomo.jpg"  class="grande"></div>
-            <p id="text">Nomo Graca, donde la comida es una maravilla, comida japonesa con sababores nuevos. La comida bien presentada y bien servida en un ambiente informal y bien decorado. El servicio es execelente y el local es amplio con opción de reserva aunque algo lento en servir.</p>
-            <p id="text3">Telefono: 934 15 96 22</p>
+            <p class="text">En Nomo Graca, encontrarás comida Japonesa donde aquí la comida es una maravilla, su ambiente es moderno y acogedor con elementos de madera y acero oxidado, dispone de un salón amplio y una terraza exterior. Este restaurante tiene opciones vegetarianas, veganas y opciones sin gluten.La comida es bien presentada. El servicio es execelente y el local es amplio con opción de reserva aunque algo lento en servir.</p>
+            <p class="text3">Telefono: 934 15 96 22</p>
           </div>
           <div id="haiku"><h2>Ramen BCN</h2>
             <div> <img src="foto/ramen.jpg"  class="grande"></div>
-            <p id="text">En este restaurente la comida esta buenisima, el trato al cliente es estupendo siendo amable y atento, el local es grande y limpio y buena decoracion basica pero llamatiba a la vez, es muy recomendable visitar este lugar.</p>
-            <p id="text3">Telefono: 931 06 58 74</p>
+            <p class="text">En este restaurente la comida esta buenisima, el trato al cliente es estupendo siendo amable y atento, el local es grande y limpio y buena decoracion basica pero llamatiba a la vez, es muy recomendable visitar este lugar.</p>
+            <p class="text3">Telefono: 931 06 58 74</p>
           </div>
 
 
           <div id="haiku"><h2>Yatai</h2>
             <div> <img src="foto/yatai.jpg"  class="grande"></div>
-            <p id="text">Si no has estado nunca en Japon, tienes que visitar este lugar, ya que la decoracion de este sitio esta repleto de detalles curiosos. Recomendale reservar ya que se suele llenar mucho. La comida es barata pero no es de muy buena calidad, asi que si quieres gastarte poco dinero y comer mucho este es tu sitio.</p>
-            <p id="text3">Telefono: 935 32 64 56</p>
+            <p class="text">Si no has estado nunca en Japon, tienes que visitar este lugar, ya que la decoracion de este sitio esta repleto de detalles curiosos. Recomendale reservar ya que se suele llenar mucho. La comida es barata pero no es de muy buena calidad, asi que si quieres gastarte poco dinero y comer mucho este es tu sitio.</p>
+            <p class="text3">Telefono: 935 32 64 56</p>
           </div>
 
 
 
           <div id="haiku"><h2>Kawamura</h2>
             <div> <img src="foto/okono.jpg"  class="grande"></div>
-            <p id="text">Kawamura es un restaurante cálido y bien ambientado con la cultura japonesa. El servicio es muy atento y profesional, el precio es razonable ya que la comida es de muy buena calidad. </p>
+            <p class="text">Kawamura es un restaurante cálido y bien ambientado con la cultura japonesa. El servicio es muy atento y profesional, el precio es razonable ya que la comida es de muy buena calidad. </p>
 
-            <p id="text3">Telefono: 930 23 75 46</p>
+            <p class="text3">Telefono: 930 23 75 46</p>
           </div>
 
 
           <div id="haiku"><h2>Wok Yutaka</h2>
             <div> <img src="foto/yutaka1.jpg"  class="grande"></div>
-            <p id="text">Yutaka es un restaurante buffet libre, donde puedes encontrar comida japonesa. Es un sitio donde el precio esta bien, el local es algo ruidoso pero es bastante amplio. </p>
+            <p class="text">Yutaka es un restaurante buffet libre, donde puedes encontrar comida japonesa. Es un sitio donde el precio esta bien, el local es algo ruidoso pero es bastante amplio. </p>
 
-            <p id="text3">Telefono: 934 58 04 94</p>
+            <p class="text3">Telefono: 934 58 04 94</p>
           </div>
 
 
@@ -143,7 +143,7 @@
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
+    <div id="flecha"><a href="#fondo" style="color:black"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
