--- a/web bien/BarnaJAP.html
+++ b/web bien/BarnaJAP.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img src="../inicio.jpg" id="fondo">
+  <img src="foto/inicio.jpg" id="fondo">
   <div id="idioma">
     <div id="catala">CATALÀ</div>
     <div id="castellano"><a href="nosotros.html" style="color:black">CASTELLANO</a></div>
