--- a/web bien/rutasbarnajap.html
+++ b/web bien/rutasbarnajap.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" name="MobileOptimized" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="BarnaJAPmov.css" type="text/css">
-  <link rel="stylesheet" href="BarnaJAP.css" type="text/css">
+  <link rel="stylesheet" href="rutasbarnajapmov.css" type="text/css">
+  <link rel="stylesheet" href="rutasbarnajap.css" type="text/css">
 
   <title>BarnaJap</title>
 </head>
