--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="arriba">
-      <div><a href="BarnaJAP.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
+      <div><a href="rutasbarnajap.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
         <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
         <div class="ca">Catalan</div>
@@ -45,7 +45,7 @@
          <li><a href="restaurantes.html">Restaurantes</a></li>
          <li><a href="#r">Rutas</a></li>
          <li><a href="nosotros.html">Nosotros</a></li>
-         <li><a href="BarnaJAP.html">Home</a></li>
+         <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
   </ul>
 
