--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -21,7 +21,7 @@
         <div id="texto">Restaurantes</div>
         <div id="texto1">Restaurantes japoneses tradicionales</div>
       </div>
-      <div><img src="foto/nunoya1.jpg" id="fondo"></div>
+      <div><img src="foto/restaurante.jpg" id="fondo"></div>
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
