--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -130,7 +130,7 @@
   </div>
 </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
+    <div id="flecha"><a href="#fondo" style="color:black"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
