--- a/web bien/rutasbarnajap.html
+++ b/web bien/rutasbarnajap.html
@@ -12,6 +12,7 @@
 
 <body>
   <img src="foto/inicio.jpg" id="fondo">
+  <img src="foto/fondoprincipal.jpg" id="fondo2">
   <div id="idioma">
     <div id="catala">CATALÀ</div>
     <div id="castellano"><a href="nosotros.html" style="color:black">CASTELLANO</a></div>
