--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -14,7 +14,7 @@
       <div><a href="rutasbarnajap.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
         <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
-        <div class="ca">Catalan</div>
+        <div class="ca"><a href="nosotroscat.html" style="color:black">Catalan</a></div>
       </div>
   </div>
   <div id="medio">
@@ -30,7 +30,7 @@
             <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
           <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc">Rutas</div>
+          <div class="secc"><a href="restaurantes.html" style="color:black">Rutas</div>
           <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
@@ -45,7 +45,7 @@
             </ul>
          </li>
          <li><a href="restaurantes.html">Restaurante</a></li>
-         <li><a href="#r">Rutas</a></li>
+         <li><a href="mapa.html">Rutas</a></li>
          <li><a href="nosotros.html">Nosotros</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
