--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -31,7 +31,7 @@
             <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
           <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc">Rutas</div>
+          <div class="secc"><a href="mapa.html">Rutas</a></div>
           <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
@@ -45,7 +45,7 @@
             </ul>
          </li>
          <li><a href="restaurantes.html">Restaurante</a></li>
-         <li><a href="#r">Rutas</a></li>
+         <li><a href="mapa.html">Rutas</a></li>
          <li><a href="nosotros.html">Nosotros</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
