--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -29,7 +29,7 @@
             <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
           <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc">Rutas</div>
+          <div class="secc"><a href="mapa.html">Rutas</a></div>
           <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
@@ -43,7 +43,7 @@
             </ul>
          </li>
          <li><a href="restaurantes.html">Restaurantes</a></li>
-         <li><a href="#r">Rutas</a></li>
+         <li><a href="mapa.html">Rutas</a></li>
          <li><a href="nosotros.html">Nosotros</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
